--- a/submission/AdaptiveND_PrimieroAllo_revised_2.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised_2.tex
@@ -722,7 +722,7 @@ The choice set of an empty set of minimal disjunction of abnormalities is empty.
 The derivation of a minimal disjunction of abnormalities and the formation of their union and choice set is a process that occurs along with the development of the proof-tree, and the marking procedure depends on the derivation of these types of judgements. Unlike for the standard definitions of unreliable formulae and minimal choice-sets, the conclusions of the rules \textsc{UnRel} and \textsc{Choice} do not necessarily coincide with the minimal choice-sets and sets of unreliable formulae as they are used in the standard proof-format. The following propositions guarantee that this does not lead to further complications: if an abnormality occurs in $\Unrel(\Gamma)$, but is not unreliable according to $\Gamma$, then $\Unrel(\Gamma)$ was derived from a $\Delta_i$ that isn't minimal; similarly, if an abnormality occurs in some ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$, but isn't verified by a minimally abnormal model, then it was derived from a $\Delta_i$ that isn't minimal. The key to these results is that the side-conditions that apply to the premises of \textsc{UnRel} and \textsc{Choice} refer to all disjunctions of abnormalities that occur unconditionally in the proof, and not only those used as premises.
 
 \begin{proposition}\label{prop:unrel}
-    If $\Turn{\Gamma;\cdot}{\Unrel(\Gamma)}$ occurs in a proof and $\Lambda$ is the set of all $\Delta^{min}$ derived up to stage $s$ that are still minimal at $s$, then $\Unrel(\Gamma) \subseteq \bigcup(\Lambda)$.
+    If $\Turn{\Gamma;\cdot}{\Unrel(\Gamma)}$ occurs in a proof and $\Lambda$ is the set of all $\Delta^{min}$ derived up to stage $s$ that are still minimal at $s$, then each conjunct of $\Unrel(\Gamma)$ is in $\bigcup(\Lambda)$.
 \end{proposition}
 \noindent\textsl{Proof.}~Immediate from the fact that if $\Gamma; \cdot \vdash_{s - n  + (i-1)} \Delta_i^{min}$ is a premise used to derive $\Turn{\Gamma;\cdot}{\Unrel(\Gamma)}$ then (i) $\Delta_i^{min} \in \Lambda$, and (ii) $\Delta_i^{min}$ is still minimal at stage $s-1$.\qed
 
@@ -766,7 +766,7 @@ In the above derivation, all judgements up to stage $4$ are obtained by {\sf min
 In standard Adaptive Logics, one introduces strategies to tell which applications of the {\sf RC} rule should be retracted in view of the Minimal Disjunction of Abnormalities that have been derived. Adaptive Logics come with marking mechanisms that allow such retractions, according to different possible strategies. The two `standard' strategies and their rationale are \cite{batens01}:
 
 \begin{itemize}
-    \item \textit{Reliability}: once a $\Unrel(\Gamma)$ is derived at some stage {\sf s}, \textit{every} formula $\psi$ derived at some prior stage {\sf s'} on the assumption that some $\phi\in \unrel(\Gamma)$ is false, needs to be retracted;
+    \item \textit{Reliability}: once a $\Unrel(\Gamma)$ is derived at some stage {\sf s}, \textit{every} formula $\psi$ derived at some prior stage {\sf s'} on the assumption that some $\phi\in \Unrel(\Gamma)$ is false, needs to be retracted;
 
 \item \textit{Minimal Abnormality}: once a $\Phi(\Gamma)$ is derived at some stage {\sf s}, a formula $\psi$ is marked if either (i) it is derived at some prior stage {\sf s'} on an assumption $\Theta$ which intersects with every minimal choice-set ${\sf choice_{i}}(\{\Delta_{i}, \ldots, \Delta_{n}\})\in \Phi(\Gamma)$; or (ii) for some minimal choice-set ${\sf choice_{i}}(\{\Delta_{i}, \ldots, \Delta_{n}\})\in \Phi(\Gamma)$, there is no derivation of $\psi$ on another condition $\Theta'$, such that the intersection of $\Theta'$ with ${\sf choice_{i}}$ is empty.
 \end{itemize}
@@ -1066,7 +1066,7 @@ At stage {\sf 4} a disjunction of an abnormality with $r$ is derived, and by {\s
 \end{mathpar}
 \bigskip
 
-Here the abnormality $(p \wedge \neg p)$ that was previously assumed to be false is unconditionally derived in disjunctive form with a new abnormality $(q \wedge \neg q)$ at stage {\sf 11}, where the latter is obtained by $\wedge$I from stages {\sf 7-9}. If we join now the two branches $\mathbb{D,D^{\prime}}$ to form $\mathbb{E}$, we can apply the marking-rule (where $\unrel(\Gamma)$ is the set $\{(p \wedge \neg p), (q\wedge \neg q)\}$):
+Here the abnormality $(p \wedge \neg p)$ that was previously assumed to be false is unconditionally derived in disjunctive form with a new abnormality $(q \wedge \neg q)$ at stage {\sf 11}, where the latter is obtained by $\wedge$I from stages {\sf 7-9}. If we join now the two branches $\mathbb{D,D^{\prime}}$ to form $\mathbb{E}$, we can apply the marking-rule (where $\Unrel(\Gamma)$ is the set $\{(p \wedge \neg p), (q\wedge \neg q)\}$):
 
 \begin{mathpar}
 \infer*[right=\XBox R]{
