Fixed clause (ii) at start of Sect. 4.3

--- a/submission/AdaptiveND_PrimieroAllo_revised_2.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised_2.tex
@@ -883,7 +883,7 @@ In this derivation a new abnormality is derived at stage {\sf 10}, namely the sa
 \subsection{Marking Rules for Minimal Abnormality}\label{sec:ma}
 %
 %
-Minimal abnormality is the marking strategy that reflects the following condition: a formula $\psi$ derived on a condition $\Theta^-$ is retracted if, either (i) every minimal choice-set includes some condition in $\Theta$, or (ii) there is a choice-set ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})$ such that every derivation of $\psi$ is based on a condition that is shown to be violated by ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})$. We offer rules for this strategy in Figure \ref{fig:MA}.
+Minimal abnormality is the marking strategy that reflects the following condition: a formula $\psi$ derived on a condition $\Theta^-$ is retracted if, either (i) every minimal choice-set includes some condition in $\Theta$, or (ii) there is a minimal choice-set ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})$ such that every derivation of $\psi$ is based on a condition that is shown to be violated by ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})$. We offer rules for this strategy in Figure \ref{fig:MA}.
 
 
 %To formulate appropriate marking rules, we first need to introduce a set of minimal choice sets of abnormalities:
