Small reformulation of Theorem 3

--- a/submission/AdaptiveND_PrimieroAllo_revised_2.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised_2.tex
@@ -1374,7 +1374,7 @@ A formula $\psi$ is finally derived $\TurnChecked{\Gamma;\Theta^{-}}{\psi}$ iff 
 
 
 \begin{theorem}
-$\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in {\sf AdaptiveND} if and only if there is a final derivation of $\phi$ from $\Gamma$ in a standard linear adaptive proof.
+$\TurnChecked{\Gamma;\Theta^{-}}{\psi}$ in {\sf AdaptiveND} if and only if there is a final derivation of $\psi$ from $\Gamma$ in a standard linear adaptive proof.
 \end{theorem}
 
 \begin{proof}
